--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,10 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
   <body>
-    <%= yield %>
+    <%= render "layouts/menu" %>
+    <div class="container-md col-md-5 col-lg-4">
+      <%= yield %>
+    </div>
   </body>
 </html>
