--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -1,4 +1,5 @@
 <h1>Equipment List</h1>
+<div class="shadow p-3 mt-4 rounded">
 <%= link_to "Add Equipment", new_equipment_path, class: "btn btn-primary mt-4 mb-3" %>
 <table class="table">
   <thead>
@@ -37,3 +38,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
