--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -12,6 +12,10 @@
         </li>
 
         <li class="nav-item">
+          <%= link_to "Register Issue", root_path, class: "nav-link" %>
+        </li>
+
+        <li class="nav-item">
           <%= link_to "Equipment", equipment_index_path, class: "nav-link" %>
         </li>
 
@@ -22,13 +26,11 @@
 
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
+            Issues
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">Problem Codes</a></li>
+            <li><a class="dropdown-item" href="#">Resolution Codes</a></li>
           </ul>
         </li>
       </ul>
