--- a/app/views/equipment/_form.html.erb
+++ b/app/views/equipment/_form.html.erb
@@ -51,7 +51,7 @@
     <button type="button" class="btn btn-secondary" data-action="click->warranty#add1095Days">3 years</button>
   </div>
 
-  <div class="text-center">
+  <div class="text-center mb-5">
     <%= f.submit class: "btn btn-primary me-3" %>
     <%= link_to "Cancel", equipment_index_path, class: "btn btn-secondary" %>
   </div>
